--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,19 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+	<repository>
+		<id>Release</id>
+		<name>maven-releases</name>
+		<url>http://35.196.134.186:8081/repository/maven-releases/</url>
+	</repository>
+ 
+	<snapshotRepository>
+		<id>Snapshot</id>
+		<name>maven-snapshots</name>
+		<url>http://35.196.134.186:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+</distributionManagement>
 
 
 </project>
