--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 	</repository>
  
 	<snapshotRepository>
-		<id>Snapshot</id>
+		<id>deploymentRepo</id>
 		<name>deploysnap</name>
 		<url>http://35.185.51.84:8081/repository/maven-snapshots/</url>
 	</snapshotRepository>
