--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 	<repository>
 		<id>deploymentRepo</id>
 		<name>deployrel</name>
-		<url>http://35.185.51.84:8081/repository/maven-releases/</url>
+		<url>http://.51.84:8081/repository/maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
